Add underscore and backbone

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     <li><a href="#blue" data-action="setTheme" data-theme="blue">Blue</a></li>
     <li><a href="#green" data-action="setTheme" data-theme="green">Green</a></li>
   </ul>
-  <h1 contenteditable>Dear diary...</h1>
+  <h1 class="title" contenteditable>Dear diary...</h1>
   <div class="date">On the day of August 1st, in 2013</div>
-  <div id="story" contenteditable>
+  <div class="story" contenteditable>
     <p>
     Awesome things? Bacon ipsum dolor sit amet venison tongue meatloaf short ribs shank
     rump flank bresaola corned beef chicken beef tail leberkas ham.
@@ -48,6 +48,9 @@
     short ribs turkey flank pork loin. Capicola beef hamburger meatloaf
     shoulder corned beef pancetta chicken swine drumstick brisket.</p>
   </div>
-  <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
+
+  <script src="/static/js/jquery-2.0.3.min.js"></script>
+  <script src="/static/js/underscore-min.js"></script>
+  <script src="/static/js/backbone-min.js"></script>
   <script src="/static/js/wayfinder.js"></script>
 </body>
